# Lightly

./: .arcconfig  .directory  .gitignore  .reviewboardrc  AUTHORS  BreezeConfig.cmake.in  CMakeLists.txt  COPYING-ICONS  Lightly.kdev4  LightlyConfig.cmake.in  README.md
colors/: Breeze-Dark.colors  Breeze.colors  BreezeDark.colors  BreezeHighContrast.colors  BreezeLight.colors  CMakeLists.txt  Darkly.colors  ExtraDesktop.sh  Lightly-Dark.color  Lightly-Dark.colors  Lightly.colors
icons/: CMakeLists.txt  d  index.theme
kde4breeze/src/: CMakeLists.txt  Messages.sh  application.cpp  application.h  kde4breeze.desktop  main.cpp
kdecoration/: CMakeLists.txt  Messages.sh  breeze.h  breeze.json  breezebutton.cpp  breezebutton.h  breezecolorsettings.cpp  breezecolorsettings.h  breezedecoration.cpp  breezedecoration.h  breezeexceptionlist.cpp  breezeexceptionlist.h  breezesettings.kcfgc  breezesettingsdata.kcfg  breezesettingsprovider.cpp  breezesettingsprovider.h  breezesizegrip.cpp  breezesizegrip.h  config-lightly.h.cmake  lightly.h  lightly.json  lightlybutton.cpp  lightlybutton.h  lightlydecoration.cpp  lightlydecoration.h  lightlyexceptionlist.cpp  lightlyexceptionlist.h  lightlysettings.kcfgc  lightlysettingsdata.kcfg  lightlysettingsprovider.cpp  lightlysettingsprovider.h  lightlysizegrip.cpp  lightlysizegrip.h
kdecoration/config/: breezeconfig.cpp  breezeconfig.h  breezeconfigwidget.cpp  breezeconfigwidget.h  breezedecorationconfig.desktop  breezedetectwidget.cpp  breezedetectwidget.h  breezeexceptiondialog.cpp  breezeexceptiondialog.h  breezeexceptionlistwidget.cpp  breezeexceptionlistwidget.h  breezeexceptionmodel.h  breezeitemmodel.h  breezelistmodel.h  lightlyconfigwidget.cpp  lightlyconfigwidget.h  lightlydecorationconfig.desktop  lightlydetectwidget.cpp  lightlydetectwidget.h  lightlyexceptiondialog.cpp  lightlyexceptiondialog.h  lightlyexceptionlistwidget.cpp  lightlyexceptionlistwidget.h  lightlyexceptionmodel.cpp  lightlyexceptionmodel.h  lightlyitemmodel.cpp  lightlyitemmodel.h  lightlylistmodel.h
kstyle/: CMakeLists.txt  README  breeze.h  breeze.json  breeze.kcfg  breeze.themerc  breezeaddeventfilter.cpp  breezeaddeventfilter.h  breezeanimationmodes.h  breezeblurhelper.cpp  breezeblurhelper.h  breezeconfig.h.cmake  breezeframeshadow.cpp  breezeframeshadow.h  breezehelper.cpp  breezehelper.h  breezemdiwindowshadow.cpp  breezemdiwindowshadow.h  breezemetrics.h  breezemnemonics.cpp  breezemnemonics.h  breezepalettehelper.cpp  breezepalettehelper.h  breezepropertynames.cpp  breezepropertynames.h  breezeshadowhelper.cpp  breezeshadowhelper.h  breezesplitterproxy.cpp  breezesplitterproxy.h  breezestyle.cpp  breezestyle.h  breezestyleconfigdata.kcfgc  breezestyleplugin.cpp  breezestyleplugin.h  breezetileset.cpp  breezetileset.h  breezewindowmanager.cpp  breezewindowmanager.h  config-breeze.h.cmake  config-lightly.h.cmake  (+33 more)
kstyle/animations/: breezeanimation.cpp  breezeanimation.h  breezeanimationdata.cpp  breezeanimationdata.h  breezeanimations.cpp  breezeanimations.h  breezebaseengine.cpp  breezebaseengine.h  breezebusyindicatordata.cpp  breezebusyindicatordata.h  breezebusyindicatorengine.cpp  breezebusyindicatorengine.h  breezedatamap.h  breezedialdata.cpp  breezedialdata.h  breezedialengine.cpp  breezedialengine.h  breezeenabledata.cpp  breezeenabledata.h  breezegenericdata.cpp  breezegenericdata.h  breezeheaderviewdata.cpp  breezeheaderviewdata.h  breezeheaderviewengine.cpp  breezeheaderviewengine.h  breezemdiwindowdata.cpp  breezemdiwindowdata.h  breezemdiwindowengine.cpp  breezemdiwindowengine.h  breezescrollbardata.cpp  breezescrollbardata.h  breezescrollbarengine.cpp  breezescrollbarengine.h  breezesliderdata.cpp  breezesliderdata.h  breezesliderengine.cpp  breezesliderengine.h  breezespinboxdata.cpp  breezespinboxdata.h  breezespinboxengine.cpp  (+79 more)
kstyle/config/: CMakeLists.txt  Messages.sh  breezeconfigdialog.cpp  breezeconfigdialog.h  breezestyleconfig.cpp  breezestyleconfig.desktop  breezestyleconfig.h  breezestyleconfigmodule.cpp  breezestyleconfigmodule.h  lightlystyleconfig.cpp  lightlystyleconfig.desktop  lightlystyleconfig.h  lightlystyleconfigmodule.cpp  lightlystyleconfigmodule.h  main.cpp  sc-apps-breeze-settings.svgz  sc-apps-lightly-settings.svgz
kstyle/debug/: breezewidgetexplorer.cpp  breezewidgetexplorer.h  lightlywidgetexplorer.cpp  lightlywidgetexplorer.h
kstyle/resources/: close.svgz  maximize.svgz  minimize.svgz  resources.qrc  restore.svgz
libbreezecommon/: CMakeLists.txt  breezeboxshadowhelper.cpp  breezeboxshadowhelper.h  breezeboxshadowrenderer.cpp  breezeboxshadowrenderer.h  config-breezecommon.h.cmake  lightlyboxshadowrenderer.cpp
liblightlycommon/: CMakeLists.txt  lightlyboxshadowrenderer.cpp  lightlyboxshadowrenderer.h
misc/gtkbreeze/: CMakeLists.txt  gtkbreeze.upd  main.cpp
misc/kde4breeze/: CMakeLists.txt
wallpapers/: CMakeLists.txt
wallpapers/BlueFlower/: metadata.desktop
wallpapers/ForestHouse/: metadata.desktop
wallpapers/Helios/: metadata.desktop
wallpapers/IndianSummer/: metadata.desktop
wallpapers/Next/: metadata.desktop
wallpapers/Poppy/: metadata.desktop
wallpapers/WalmendingerHorn/: metadata.desktop
widgetstyles/qtquickcontrolsstyle/: Breeze.qml  Breeze.qmlproject  ButtonStyle.qml  CMakeLists.txt  CheckBoxIndicator.qml  ColorUtils.js  DemoPage3.qml  DemoPage4.qml  FocusFrameStyle.qml  RadioButtonStyle.qml  ScrollBar.qml  StatusBarStyle.qml  SwitchStyle.qml  TableViewStyle.qml  TextFieldStyle.qml  ToolBarStyle.qml  Triangle.qml  qmldir
windec/: CMakeLists.txt
windec/kdecoration2/: CMakeLists.txt  breeze.h  breeze.json  breezebutton.cpp  breezebutton.h  breezebuttons.cpp  breezebuttons.h  breezecolorsettings.cpp  breezecolorsettings.h  breezedeco.cpp  breezedeco.h  breezedecoration.cpp  breezedecoration.h  breezeexceptionlist.cpp  breezeexceptionlist.h  breezehelper.cpp  breezehelper.h  breezeimageprovider.cpp  breezeimageprovider.h  breezesettings.kcfgc  breezesettingsdata.kcfg  breezesettingsprovider.cpp  breezesettingsprovider.h  breezesizegrip.cpp  breezesizegrip.h  config-breeze.h.cmake
(+1742 files in other folders)
