install(FILES Breeze.colors
        DESTINATION ${DATA_INSTALL_DIR}/color-schemes/)
install(FILES BreezeDark.colors
        DESTINATION ${DATA_INSTALL_DIR}/color-schemes/)
install(FILES BreezeHighContrast.colors
        DESTINATION ${DATA_INSTALL_DIR}/color-schemes/)
install(FILES BreezeLight.colors
        DESTINATION ${DATA_INSTALL_DIR}/color-schemes/)
