
install(DIRECTORY Next DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY BlueFlower DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY ForestHouse DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Helios DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY IndianSummer DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Poppy DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY WalmendingerHorn DESTINATION ${WALLPAPER_INSTALL_DIR})
